ch06/devgate/rules.v4
# Generated by iptables-save v1.8.4 on Sun Sep  5 08:55:00 2021
*nat
:PREROUTING ACCEPT [658:41573]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [2472:195180]
:POSTROUTING ACCEPT [26:2056]
-A POSTROUTING -o enp1s0 -j MASQUERADE
COMMIT
# Completed on Sun Sep  5 08:55:00 2021
# Generated by iptables-save v1.8.4 on Sun Sep  5 08:55:00 2021
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -i enp6s0 -j ACCEPT
-A INPUT -i enp7s0 -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i enp1s0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i enp1s0 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -s 10.10.10.0/24 -d 10.20.20.0/24 -i enp6s0 -o enp7s0 -j ACCEPT
-A FORWARD -s 10.20.20.0/24 -d 10.10.10.0/24 -i enp7s0 -o enp6s0 -j ACCEPT
-A FORWARD -p icmp -j ACCEPT
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -p tcp -m tcp --dport 53 -m state --state NEW -j ACCEPT
-A FORWARD -p udp -m udp --dport 53 -m state --state NEW -j ACCEPT
-A FORWARD -p tcp -m tcp --dport 80 -m state --state NEW -j ACCEPT
-A FORWARD -p tcp -m tcp --dport 443 -m state --state NEW -j ACCEPT
-A FORWARD -p udp -m udp --dport 123 -m state --state NEW -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -o enp6s0 -j ACCEPT
-A OUTPUT -o enp7s0 -j ACCEPT
-A OUTPUT -p icmp -j ACCEPT
-A OUTPUT -o enp1s0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -o enp1s0 -p tcp -m tcp --dport 53 -m state --state NEW -j ACCEPT
-A OUTPUT -o enp1s0 -p udp -m udp --dport 53 -m state --state NEW -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 80 -m state --state NEW -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 443 -m state --state NEW -j ACCEPT
-A OUTPUT -p udp -m udp --dport 123 -m state --state NEW -j ACCEPT
COMMIT
# Completed on Sun Sep  5 08:55:00 2021
